fixed headshot spacing and sizing

--- a/styles.css
+++ b/styles.css
@@ -181,8 +181,8 @@ button {
 
 #doug-headshot {
   border-radius: 50%;
-  width: 60vw;
-  margin: 12px 0;
+  width: 52vw;
+  margin: 6px 0;
 }
 
 footer {
